[package]
name = "pine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "^0.28.1", features = ["event-stream"] }
image = "0.25.9"
ratatui = "0.29.0"
ratatui-image = "8.1.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tui-textarea = "0.7.0"
